examples/front-proxy/service-envoy-mtls.json
{
  "listeners": [
    {
      "port": 8100,
      "ssl_context": {
        "alpn_protocols": "http/1.1",
	"alt_alph_protocols": "http/1.1",
	"cert_chain_file": "cert.pem",
	"private_key_file": "key.pem",
	"ca_cert_file": "root/ca/intermediate/certs/ca-chain.cert.pem"
      },
      "filters": [
        {
          "type": "read",
          "name": "http_connection_manager",
          "config": {
            "codec_type": "auto",
            "stat_prefix": "ingress_http",
            "route_config": {
              "virtual_hosts": [
                {
                  "name": "service",
                  "domains": ["*"],
                  "routes": [
                    {
                      "timeout_ms": 0,
                      "prefix": "/service",
                      "cluster": "local_service"
                    }
                  ]
                }
              ]
            },
            "filters": [
              {
                "type": "decoder",
                "name": "router",
                "config": {}
              }
            ]
	  }
	}
      ]
    }
  ],
  "admin": {
    "access_log_path": "/dev/null",
    "port": 8001
  },
  "cluster_manager": {
    "clusters": [
      {
	"name": "local_service",
	"connect_timeout_ms": 10000,
	"type": "strict_dns",
	"lb_type": "round_robin",
        "hosts": [
          {
            "url": "tcp://127.0.0.1:9100"
          }
        ]
      }
    ]
  }
}
